package de.gkvtransmitter.entity;

import java.time.OffsetDateTime;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.Table;

@Entity
@Table(name = "blueprints")
public class Blueprint {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(nullable = false)
    private String name;

    @Column(nullable = false)
    private String templateName;

    @Column(nullable = false)
    private String payload; // JSON payload with saved visible fields and header codes

    @Column(nullable = false)
    private OffsetDateTime createdAt;

    public Blueprint() {
    }

    public Blueprint(String name, String templateName, String payload, OffsetDateTime createdAt) {
        this.name = name;
        this.templateName = templateName;
        this.payload = payload;
        this.createdAt = createdAt;
    }

    public Long getId() {
        return id;
    }

    /**
     * Setzt die Kennnummer.
     *
     * <p>Im Betrieb vergibt Hibernate sie; gebraucht wird der Setzer, um eine
     * Blaupause ohne Datenbank aufzubauen. Die uebrigen Entitaeten haben ihn
     * seit je, nur diese nicht.</p>
     */
    public void setId(Long id) {
        this.id = id;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getTemplateName() {
        return templateName;
    }

    public void setTemplateName(String templateName) {
        this.templateName = templateName;
    }

    public String getPayload() {
        return payload;
    }

    public void setPayload(String payload) {
        this.payload = payload;
    }

    public OffsetDateTime getCreatedAt() {
        return createdAt;
    }

    public void setCreatedAt(OffsetDateTime createdAt) {
        this.createdAt = createdAt;
    }
}
