package de.gkvtransmitter.enums;

public enum InputOption {
    CODE,
    NUMBER_SUGGESTION,
    NUMBER,
    STRING,
    PERCENT,
    COST,
    BOOLEAN,
    DATE,
    TIME
}
