package de.gkvtransmitter.definition;

public enum InvoiceType {
    SLLA,
    SLGA
}