package de.gkvtransmitter.model.segment.field;

/**
 * Dieses Enum soll spaeter die zulaessigen fachlichen Feldtypen fuer
 * Segmentdefinitionen auflisten.
 */
public enum FieldType {
    DATE,
    NUMBER,
    STRING
}
